# tpush

./: .gitignore  Cargo.toml  README.md  config.example.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
app/: app.json  metro.config.js  package.json  tsconfig.json
app/android/: gradle.properties  settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/moe/tnxg/push/: MainActivity.kt  MainApplication.kt
app/android/app/src/main/res/values/: styles.xml
app/core/: Cargo.toml  build.rs
app/core/android/: build.gradle  consumer-rules.pro
app/core/android/src/main/: AndroidManifest.xml
app/core/android/src/main/kotlin/moe/tnxg/push/core/: AppState.kt  BootReceiver.kt  Bridge.kt  Config.kt  ConnectionStatus.kt  CoreApplication.kt  Crypto.kt  ForegroundService.kt  Notifications.kt  ResourceMetrics.kt  TpushModule.kt  TpushPackage.kt
app/core/ffi/: tpush_core.udl
app/core/src/: lib.rs  store.rs
app/panel/: index.html  package.json  tsconfig.json  vite.config.ts
app/panel/src/: api.ts  main.tsx  messages.css  style.css  theme.css
app/src/: App.tsx  utils.ts
app/src/components/: MessageList.tsx  PushAppBar.tsx  SettingsDialog.tsx
scripts/: README.md  adb-install.sh  build-android.sh  build-output.sh  local-run.sh
server/: Cargo.toml  package.json
server/src/: auth.rs  channel_routes.rs  config.rs  crypto.rs  db.rs  error.rs  main.rs  models.rs  panel_assets.rs  routes.rs  state.rs
