[package]
name = "tpush-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
jsonwebtoken = "9"
mime_guess = "2"
rust-embed = "8"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
