[package]
name = "tpush_core"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "tpush_core"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jni = "0.21"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.28", features = ["cli"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
