[package]
name = "tpush_core"
version = "0.0.1"
edition = "2024"
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "tpush_core"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
jni = "0.22.4"
once_cell = "1.21.4"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.150"
uniffi = { version = "0.31.2", default-features = false, features = ["cli"] }
uuid = { version = "1.23.3", default-features = false, features = ["v4"] }

[build-dependencies]
uniffi = { version = "0.31.2", default-features = false, features = ["build"] }
